# apprtc

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  codecov.yml
.github/workflows/: cargo.yml  grcov.yml  tests.yml
apprtc/: Cargo.toml
apprtc/cert/: cert.pem  key.pem
apprtc/src/: grpc_server.rs  lib.rs  main.rs  sfu_server.rs  signaling_server.rs  tls.rs  ws_server.rs
apprtc/tests/: p2p_v2_signaling_test.rs  p2p_webrtc_data_channel_test.rs  p2p_webrtc_media_test.rs  server_test.rs  sfu_v2_webrtc_data_channel_test.rs  sfu_v2_webrtc_header_extension_test.rs  sfu_v2_webrtc_media_test.rs
apprtc/tests/common/: mod.rs  sfu_v2.rs
appweb/: Cargo.toml
appweb/css/: main.css
appweb/html/: grid_template.html  index_template.html
appweb/js/: README.md  appcontroller.js  call.js  peerconnectionclient.js  peerconnectionclient_test.js  roomselection.js  roomselection_test.js  signalingchannel.js  signalingchannel_test.js  test_mocks.js  util.js
appweb/src/: config.rs  controller.rs  dashboard.rs  grpc_client.rs  lib.rs  params.rs  room_server.rs  templates.rs  webserver.rs  ws_client.rs  wsclient.rs
cert/: key.pem
collider/collider/: client.go  room.go  roomTable.go  templates.go  webserver_test.go
collider/collidermain/: main.go
deployment/: README.md
docs/deployment/: README-appr.tc.md  README-apprtc-sfu.md  README-sfu.rs.md  README.md  RUST.md
docs/design/: apprtc-signaling-architecture-design.md
go/collider/: README.md  go.mod
go/collider/collider/: collider.go  collider_test.go  config.go  dashboard_test.go  params.go  room_test.go  webserver.go
go/deployment/: README.md
go/web_app/html/: full_template.html  index_template.html  params.html
go/web_app/js/: peerconnectionclient.js  roomselection_test.js
scripts/: cert.pem  log2seq.py  log_to_sequence_diagram.py  start.sh  stop.sh
signaling/: Cargo.toml
signaling-proto/: Cargo.toml  build.rs
signaling-proto/proto/: signaling.proto  signaling.v1.proto  signaling.v2.proto
signaling-proto/src/: lib.rs
signaling/src/: client.rs  collider.rs  lib.rs  messages.rs  room.rs  room_table.rs  sfu.rs  v2.rs  ws.rs  ws_server.rs  wsserver.rs
src/: config.rs  grpc_server.rs  http.rs  lib.rs  params.rs  proto.rs  room_table.rs  signaling_server.rs  webapp.rs  ws.rs
tests/: server_test.rs  sfu_v2_downgrade_signaling_test.rs  sfu_v2_webrtc_header_extension_test.rs
tests/common/: sfu_v2.rs
web_app/html/: index_template.html
