[workspace]
members = [
    "apprtc",       # apprtc binary
    "appweb",       # app/web server
    "signaling",    # signaling hub
]
resolver = "2"

[profile.dev]
opt-level = 0

[workspace.package]
version = "0.20.0-rc.3"
authors = ["Rain Liu <y@liu.mx>"]
edition = "2024"
license = "MIT/Apache-2.0"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/apprtc"
keywords = ["signaling", "networking", "protocols"]
categories = ["network-programming"]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
url = "2"
rand = "0.10.1"
minijinja = "2"
sansio = "1.0.1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
tower-http = { version = "0.6", features = ["fs"] }
tower = { version = "0.5", features = ["util"] }
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.11"
chrono = "0.4.45"
anyhow = "1.0.103"
log = "0.4.33"
