[package]
name = "apprtc"
description = "AppRTC P2P/SFU Signaling Server in Rust"
documentation = "https://docs.rs/apprtc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[dependencies]
appweb = { version = "0.20.0-rc.3", path = "../appweb" }
signaling = { version = "0.20.0-rc.3", path = "../signaling" }

tokio.workspace = true
axum.workspace = true
clap.workspace = true
env_logger.workspace = true
chrono.workspace = true
anyhow.workspace = true
log.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true
