[package]
name = "apprtc"
description = "AppRTC P2P/SFU Signaling Server in Rust"
documentation = "https://docs.rs/apprtc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[dependencies]
appweb.workspace = true
signaling.workspace = true
signaling-proto.workspace = true

sansio.workspace = true

tokio.workspace = true
axum.workspace = true
clap.workspace = true
env_logger.workspace = true
chrono.workspace = true
anyhow.workspace = true
log.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true
url.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
tonic.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
webrtc.workspace = true
rtc.workspace = true

rand.workspace = true
serde_json.workspace = true
async-trait.workspace = true
bytes.workspace = true
