[package]
name = "appweb"
description = "AppWeb in Rust"
documentation = "https://docs.rs/appweb"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[dependencies]
signaling = { version = "0.1.0-alpha.1", path = "../signaling" }

serde.workspace = true
serde_json.workspace = true
url.workspace = true
rand.workspace = true
minijinja.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true

[dev-dependencies]
tower.workspace = true
