[package]
name = "signaling-proto"
description = "Signaling Protobuf of AppRTC"
documentation = "https://docs.rs/signaling-proto"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[dependencies]
prost.workspace = true

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored.workspace = true
