[package]
name = "signaling"
description = "Signaling in Rust"
documentation = "https://docs.rs/signaling"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sansio.workspace = true
tokio.workspace = true
axum.workspace = true
futures-util.workspace = true
